crates/runtime/src/http/v1/snapshots/runtime__http__v1__nsql__tests__nsql_context_block_with_samples.snap
---
source: crates/runtime/src/http/v1/nsql.rs
expression: nsql_context_block_with_samples_for_test()
---
# Spice.ai NSQL Context
- Write SQL for the Spice runtime, which uses Apache DataFusion with the SQL parser configured for the PostgreSQL dialect.
- Return only valid SQL code, without markdown fences.
- Quote column names that contain capitals or special characters with double quotes.
- For tables with schemas and catalogs, use "catalog"."schema"."table", not "catalog.schema.table".
- Use table and column descriptions, primary keys, foreign keys, unique constraints, and indexes when choosing joins and filters.
- Apache DataFusion version: 55.1.0.
- Schema metadata includes table and column comments/descriptions when supplied by the connector or Spicepod.

## Datasets
- `sales.orders`: Customer orders
- `support_tickets`: Customer support tickets

## Schemas
| table_reference | column_name | data_type | nullable | description |
| --- | --- | --- | --- | --- |
| sales.orders | order_id | Int64 | false | Unique order identifier |
| sales.orders | customer_id | Utf8 | false | Customer account identifier |
| support_tickets | ticket_id | Int64 | false | Support ticket identifier |
| support_tickets | sentiment | Utf8 | true | Model-derived sentiment label |

## Dataset Relationships
### `sales.orders`
- Primary key: `order_id`
- Foreign keys:
    - (`customer_id`) references `spice.sales.customers` (`id`)
- Indexes:
    - `customer_id`: `customer_id` (enabled, spicepod.acceleration.indexes)
- Search indexes:
    - vector search on `customer_id` using `embed_model`. Syntax: `vector_search(sales.orders, 'query text', customer_id)`. Engine/index: `duckdb_vector_index`. Row id: `order_id`.
    - full-text search on `customer_id` using `tantivy`. Syntax: `text_search(sales.orders, 'query text', customer_id)`. Row id: `order_id`.

## SQL Functions
Spice SQL runs on Apache DataFusion with the SQL parser configured for the PostgreSQL dialect. Standard DataFusion SQL functions are available. Additional Spice-specific and registered user-defined functions are listed below. Run SELECT * FROM list_udfs() to inspect the full registered function inventory:

### JSON functions
- `flatten_json`: Flattens JSON objects into key-value rows or structures. Syntax: `flatten_json(json)`.
- `flatten_json_properties`: Flattens JSON-schema properties into key-value rows or structures. Syntax: `flatten_json_properties(json_schema)`.
- `json_as_text`: Converts a JSON value to text (SCALAR). Syntax: `json_as_text(json)`.
- `json_contains`: Returns whether one JSON value contains another (SCALAR). Syntax: `json_contains(json, value)`.
- `json_from_scalar`: Converts a scalar value to JSON (SCALAR). Syntax: `json_from_scalar(value)`.
- `json_get`: Extracts a JSON value by path (SCALAR). Syntax: `json_get(json, path)`.
- `json_get_array`: Extracts a JSON array by path (SCALAR). Syntax: `json_get_array(json, path)`.
- `json_get_bool`: Extracts a boolean value from JSON by path (SCALAR). Syntax: `json_get_bool(json, path)`.
- `json_get_float`: Extracts a floating-point value from JSON by path (SCALAR). Syntax: `json_get_float(json, path)`.
- `json_get_int`: Extracts an integer value from JSON by path (SCALAR). Syntax: `json_get_int(json, path)`.
- `json_get_json`: Extracts a nested JSON value by path (SCALAR). Syntax: `json_get_json(json, path)`.
- `json_get_str`: Extracts a string value from JSON by path (SCALAR). Syntax: `json_get_str(json, path)`.
- `json_length`: Returns the length of a JSON array or object (SCALAR). Syntax: `json_length(json)`.
- `json_object_keys`: Returns the keys of a JSON object (SCALAR). Syntax: `json_object_keys(json)`.
- `json_tree`: Expands JSON into a tree of path, key, and value rows or structures. Syntax: `json_tree(json)`.
- `json_tuple` (SCALAR). Syntax: `json_tuple(...)`.

### Search functions
- `rerank`: Re-ranks search results or table rows using a configured reranker model. Syntax: `rerank(input, model => 'model_name', document => 'column_name'[, query => 'query text'])`.
- `rrf`: Combines multiple search result sets using reciprocal rank fusion. Syntax: `rrf(text_search(...), vector_search(...)[, limit => n])`.
- `text_search`: Runs full-text search over a configured searchable dataset. Syntax: `text_search(dataset, 'query text'[, column])`.
- `vector_search`: Runs vector search over a configured embedding/vector index. Syntax: `vector_search(dataset, 'query text'[, column])`.

### Additional registered functions
- `bucket`: Assigns a numeric expression to a bucket boundary (SCALAR). Syntax: `bucket(value, buckets)`.
- `col_description`: Returns the configured description for a table column (SCALAR). Syntax: `col_description(table_catalog, table_schema, table_name, column_name)`.
- `cosine_distance`: Computes cosine distance between two vectors (SCALAR). Syntax: `cosine_distance(vector_a, vector_b)`.
- `digest_many`: Computes a digest for one or more input expressions (SCALAR). Syntax: `digest_many(value[, ...])`.
- `inner_product`: Computes the inner product of two vectors (SCALAR). Syntax: `inner_product(vector_a, vector_b)`.
- `l2_distance`: Computes Euclidean distance between two vectors (SCALAR). Syntax: `l2_distance(vector_a, vector_b)`.
- `l2_norm`: Computes the L2 norm of a vector (SCALAR). Syntax: `l2_norm(vector)`.
- `l2_squared_distance`: Computes squared Euclidean distance between two vectors (SCALAR). Syntax: `l2_squared_distance(vector_a, vector_b)`.
- `list_udfs`: Lists functions registered in the current DataFusion context. Syntax: `list_udfs()`.
- `obj_description`: Returns the configured description for a table or object (SCALAR). Syntax: `obj_description(table_catalog, table_schema, table_name)`.
- `truncate`: Truncates values to the requested precision (SCALAR). Syntax: `truncate(value, precision)`.

### Spark compatibility scalar functions
Spark-compatible scalar functions are available for arrays, maps, structs, dates, strings, hashes, URLs, XML, and other common Spark SQL expressions.
- `add_months`, `array`, `base64`, `bin`, `bit_count`, `bit_get`, `bitmap_bit_position`, `bitmap_bucket_number`
- `bitmap_count`, `bitwise_not`, `char`, `concat`, `crc32`, `csc`, `date_add`, `date_diff`
- `date_sub`, `elt`, `expm1`, `format_string`, `from_utc_timestamp`, `hex`, `hour`, `if`
- `ilike`, `is_valid_utf8`, `json_tuple`, `last_day`, `length`, `like`, `luhn_check`, `make_dt_interval`
- `make_interval`, `make_valid_utf8`, `map_from_arrays`, `map_from_entries`, `minute`, `mod`, `negative`, `next_day`
- `parse_url`, `pmod`, `rint`, `sec`, `second`, `sha1`, `sha2`, `shiftleft`
- `shiftright`, `shiftrightunsigned`, `shuffle`, `size`, `slice`, `soundex`, `space`, `spark_cast`
- `str_to_map`, `time_trunc`, `to_utc_timestamp`, `try_parse_url`, `try_url_decode`, `unbase64`, `unhex`, `unix_date`
- `unix_micros`, `unix_millis`, `unix_seconds`, `url_decode`, `url_encode`, `width_bucket`, `xxhash64`

## Sample Data

### Distinct value samples for `support_tickets`
| sentiment |
| --- |
| positive |
| negative |

### Example rows for `sales.orders`
| order_id | customer_id |
| --- | --- |
| 42 | CUST-1 |
